--- a/styles/app.css
+++ b/styles/app.css
@@ -1,32 +1,47 @@
-body {
-  background-color: #e4e3ea;
+html {
+  box-sizing: border-box;
 }
 
-header {
-  background-color: #604bea;
-  height: 6rem;
-  max-width: 850px;
-  min-width: 250px;
-  margin: 0 auto;
-  border-radius: 5px;
-  box-shadow: -5px 2px 18px -5px rgba(0, 0, 0, 0.75);
+*,
+*:after,
+*:before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+  text-decoration: none;
 }
-header > h1 {
-  text-align: center;
-  line-height: 6rem;
-  color: white;
+body {
+  position: relative;
+  background-color: #e4e3ea;
+}
+#title {
+  color: #00000075;
+}
+
+.text-white a {
+  color: white !important;
+}
+
+#container-links {
+  display: flex !important;
+  flex-flow: row wrap !important;
+  justify-content: flex-end !important;
 }
 
 .images-random-container {
   display: flex;
   justify-content: center;
   margin: 2rem auto;
-  width: 500px;
+}
+
+#main {
+  height: calc(100vh - 150px);
 }
 .images-random-container img {
   width: 400px;
   height: 400px;
 }
+
 .containerImgFavourites {
   display: flex;
   flex-flow: column wrap;
@@ -41,24 +56,108 @@ img {
   margin-top: 1rem;
   border-radius: 5px;
 }
-.containerFavourites {
-  min-width: 750px;
-  margin: 3rem auto;
-  display: grid;
-  grid-template-columns: auto auto auto;
-}
-
-.dFlex {
-  display: flex;
-  flex-flow: column wrap;
-  align-items: center;
-}
 .imgFavourites {
   margin-bottom: 1rem;
   width: 250px;
   height: 250px;
 }
+@media (max-width: 991px) {
+  .imgFavourites {
+    margin-bottom: 1rem;
+    width: 200px;
+    height: 200px;
+  }
+}
 
 .favCat {
   margin-top: -5rem;
+}
+
+.buttonDelete {
+  text-decoration: none;
+  text-align: center;
+  padding: 5px 15px;
+  border: none;
+  border-radius: 5px;
+  border-radius: 5px;
+  border-radius: 5px;
+  font: 18px Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: white;
+  width: 250px;
+  background-color: #585658;
+  background-image: linear-gradient(top, #b8bae0 0%, #979ede 100%);
+  background-image: linear-gradient(top, #b8bae0 0%, #979ede 100%);
+  background-image: linear-gradient(top, #b8bae0 0%, #979ede 100%);
+  background-image: linear-gradient(top, #b8bae0 0%, #979ede 100%);
+  background-image: linear-gradient(top, #b8bae0 0%, #979ede 100%);
+  box-shadow: 0px 0px 8px #ded1d1, inset 0px 0px 1px #fcf2f2;
+  box-shadow: 0px 0px 8px #ded1d1, inset 0px 0px 1px #fcf2f2;
+  box-shadow: 0px 0px 8px #ded1d1, inset 0px 0px 1px #fcf2f2;
+  opacity: 0.93;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=93);
+  filter: alpha(opacity=93);
+  text-shadow: 0px 0px 15px #bababa;
+  filter: dropshadow(color=#bababa, offx=0, offy=0);
+  transition: all 0.3s ease;
+}
+
+@media (max-width: 991px) {
+  .buttonDelete {
+    padding: 8px;
+    font-size: 16px;
+    color: white;
+    width: 200px;
+  }
+}
+
+button:hover {
+  scale: 1.1;
+}
+
+.nav-link {
+  margin-right: 1rem;
+}
+
+.container-fluid {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.inactive {
+  display: none !important;
+}
+
+.titleFav {
+  text-align: center;
+  margin-top: 3rem;
+}
+
+footer {
+  text-align: center;
+  width: 100%;
+  height: 4rem;
+  position: fixed;
+  bottom: 0;
+  z-index: 1000;
+  margin: 0 !important;
+}
+
+.img-style {
+  object-fit: cover;
+}
+
+footer .container {
+  height: 100%;
+  vertical-align: center;
+}
+
+.developed h6,
+.github a {
+  height: 4rem;
+  line-height: 4rem;
+  color: white;
+}
+.github a {
+  text-decoration: none;
 }
