--- a/styles/app.css
+++ b/styles/app.css
@@ -11,8 +11,10 @@ html {
   text-decoration: none;
 }
 body {
-  position: relative;
-  background-color: #e4e3ea;
+  display: flex;
+  flex-flow: column wrap;
+  min-height: 100vh;
+  background-color: #eee;
 }
 #title {
   color: #00000075;
@@ -34,10 +36,7 @@ body {
   margin: 2rem auto;
 }
 
-#main {
-  height: calc(100vh - 150px);
-}
-.images-random-container img {
+.random-container img {
   width: 400px;
   height: 400px;
 }
@@ -53,8 +52,8 @@ body {
 }
 
 img {
-  margin-top: 1rem;
-  border-radius: 5px;
+  margin-top: 4rem;
+  border-radius: 5px !important;
 }
 .imgFavourites {
   margin-bottom: 1rem;
@@ -73,48 +72,6 @@ img {
   margin-top: -5rem;
 }
 
-.buttonDelete {
-  text-decoration: none;
-  text-align: center;
-  padding: 5px 15px;
-  border: none;
-  border-radius: 5px;
-  border-radius: 5px;
-  border-radius: 5px;
-  font: 18px Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  color: white;
-  width: 250px;
-  background-color: #585658;
-  background-image: linear-gradient(top, #b8bae0 0%, #979ede 100%);
-  background-image: linear-gradient(top, #b8bae0 0%, #979ede 100%);
-  background-image: linear-gradient(top, #b8bae0 0%, #979ede 100%);
-  background-image: linear-gradient(top, #b8bae0 0%, #979ede 100%);
-  background-image: linear-gradient(top, #b8bae0 0%, #979ede 100%);
-  box-shadow: 0px 0px 8px #ded1d1, inset 0px 0px 1px #fcf2f2;
-  box-shadow: 0px 0px 8px #ded1d1, inset 0px 0px 1px #fcf2f2;
-  box-shadow: 0px 0px 8px #ded1d1, inset 0px 0px 1px #fcf2f2;
-  opacity: 0.93;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=93);
-  filter: alpha(opacity=93);
-  text-shadow: 0px 0px 15px #bababa;
-  filter: dropshadow(color=#bababa, offx=0, offy=0);
-  transition: all 0.3s ease;
-}
-
-@media (max-width: 991px) {
-  .buttonDelete {
-    padding: 8px;
-    font-size: 16px;
-    color: white;
-    width: 200px;
-  }
-}
-
-button:hover {
-  scale: 1.1;
-}
-
 .nav-link {
   margin-right: 1rem;
 }
@@ -130,26 +87,22 @@ button:hover {
 
 .titleFav {
   text-align: center;
-  margin-top: 3rem;
+  margin-top: 1rem;
 }
 
 footer {
-  text-align: center;
+  margin-top: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
   width: 100%;
   height: 4rem;
-  position: fixed;
-  bottom: 0;
   z-index: 1000;
-  margin: 0 !important;
 }
 
 .img-style {
   object-fit: cover;
-}
-
-footer .container {
-  height: 100%;
-  vertical-align: center;
 }
 
 .developed h6,
@@ -160,4 +113,38 @@ footer .container {
 }
 .github a {
   text-decoration: none;
+}
+
+.container-fav {
+  margin-bottom: 4rem;
+}
+
+.container-fav button {
+  width: 100%;
+}
+
+.active {
+  display: block !important;
+}
+
+@keyframes added-to-fav {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+.text-added-to-avourites {
+  opacity: 0;
+  margin-top: 3rem;
+  text-align: center;
+}
+
+.--fade-in-add {
+  animation: added-to-fav 1.5s ease-in;
+}
+
+.title-fav {
+  text-align: center;
 }
